Rewrote circular arc approximation code to subdivide the arc on demand - the results look better